make addca-concourse-pipeline git repo and branch configuration parameter

--- a/secrets.example.yaml
+++ b/secrets.example.yaml
@@ -1,5 +1,7 @@
 certificates-git: git@git.example.com:folder/certificates.git
 docker-images-git: git@git.example.com:folder/docker-images.git
+addca-git: https://github.com/timotto/addca-concourse-pipeline.git
+addca-git-branch: master
 
 concourse-target: https://concourse.example.com
 concourse-insecure: "false"
