--- a/src/main/concourse/pipeline.template.yaml
+++ b/src/main/concourse/pipeline.template.yaml
@@ -30,6 +30,8 @@ jobs:
       git_private_key: {{git-private-key}}
       docker_images_git: {{docker-images-git}}
       certificates_git: {{certificates-git}}
+      addca_git: {{addca-git}}
+      addca_git_branch: {{addca-git-branch}}
       docker_registry_username: {{docker-registry-username}}
       docker_registry_password: {{docker-registry-password}}
       docker_registry_prefix: {{docker-registry-prefix}}
@@ -66,8 +68,8 @@ resources:
 - name: ca-src
   type: git
   source:
-    uri: https://github.com/timotto/addca-concourse-pipeline.git
-    branch: master
+    uri: {{addca-git}}
+    branch: {{addca-git-branch}}
 
 - name: docker-images
   type: git
