--- a/src/main/concourse/pipeline.jobs.template.yaml
+++ b/src/main/concourse/pipeline.jobs.template.yaml
@@ -2,14 +2,15 @@
   public: true
   serial: true
   plan:
-  - get: _FLATNAME_-_TAG_-image
-    trigger: true
-  - get: ca-src
-    trigger: true
-    passed: [certificates-unit]
-  - get: certificates
-    trigger: true
-    passed: [certificates-unit]
+  - aggregate:
+    - get: _FLATNAME_-_TAG_-image
+      trigger: true
+    - get: ca-src
+      trigger: true
+      passed: [certificates-unit]
+    - get: certificates
+      trigger: true
+      passed: [certificates-unit]
   - task: test
     config:
       platform: linux
@@ -30,15 +31,16 @@
   public: true
   serial: true
   plan:
-  - get: _FLATNAME_-_TAG_-image
-    trigger: true
-    passed: [_FLATNAME_-_TAG_-red]
-  - get: ca-src
-    trigger: true
-    passed: [certificates-unit,_FLATNAME_-_TAG_-red]
-  - get: certificates
-    trigger: true
-    passed: [certificates-unit,_FLATNAME_-_TAG_-red]
+  - aggregate:
+    - get: _FLATNAME_-_TAG_-image
+      trigger: true
+      passed: [_FLATNAME_-_TAG_-red]
+    - get: ca-src
+      trigger: true
+      passed: [certificates-unit,_FLATNAME_-_TAG_-red]
+    - get: certificates
+      trigger: true
+      passed: [certificates-unit,_FLATNAME_-_TAG_-red]
   - task: dockerfile
     file: ca-src/src/main/ci/build-docker.yaml
     params:
@@ -53,15 +55,16 @@
   public: true
   serial: true
   plan:
-  - get: addca-_FLATNAME_-_TAG_-image
-    trigger: true
-    passed: [_FLATNAME_-_TAG_-build]
-  - get: ca-src
-    trigger: true
-    passed: [certificates-unit,_FLATNAME_-_TAG_-build]
-  - get: certificates
-    trigger: true
-    passed: [certificates-unit,_FLATNAME_-_TAG_-build]
+  - aggregate:
+    - get: addca-_FLATNAME_-_TAG_-image
+      trigger: true
+      passed: [_FLATNAME_-_TAG_-build]
+    - get: ca-src
+      trigger: true
+      passed: [certificates-unit,_FLATNAME_-_TAG_-build]
+    - get: certificates
+      trigger: true
+      passed: [certificates-unit,_FLATNAME_-_TAG_-build]
   - task: test
     config:
       platform: linux
