make certificates-unit wait for build-pipeline

--- a/src/main/concourse/pipeline.template.yaml
+++ b/src/main/concourse/pipeline.template.yaml
@@ -60,6 +60,7 @@ jobs:
   - aggregate:
     - get: ca-src
       trigger: true
+      passed: [build-pipeline]
     - get: certificates
       trigger: true
   - task: test
