--- a/secrets.example.yaml
+++ b/secrets.example.yaml
@@ -1,5 +1,7 @@
 certificates-git: git@git.example.com:folder/certificates.git
+certificates-git-branch: master
 docker-images-git: git@git.example.com:folder/docker-images.git
+docker-images-git-branch: master
 addca-git: https://github.com/timotto/addca-concourse-pipeline.git
 addca-git-branch: master
 
