added docker registry email variable

--- a/secrets.example.yaml
+++ b/secrets.example.yaml
@@ -12,6 +12,7 @@ concourse-username: concourse
 concourse-password: changeme
 concourse-pipeline: addca
 
+docker-registry-email: user@example.com
 docker-registry-username: concourse
 docker-registry-password: changeme
 docker-registry-prefix: registry.example.com:5000/folder/prefix/
