added missing source.email parameter to pipeline.resources.template.yaml

--- a/src/main/concourse/pipeline.resources.template.yaml
+++ b/src/main/concourse/pipeline.resources.template.yaml
@@ -7,6 +7,7 @@
 - name: addca-_FLATNAME_-_TAG_-image
   type: docker-image
   source:
+    email: {{docker-registry-email}}
     username: {{docker-registry-username}}
     password: {{docker-registry-password}}
     repository: _PREFIX__NAME_
