--- a/bootstrap.pipeline.yaml
+++ b/bootstrap.pipeline.yaml
@@ -28,6 +28,9 @@ jobs:
         concourse_team: {{concourse-team}}
         concourse_username: {{concourse-username}}
         concourse_password: {{concourse-password}}
+        http_proxy: {{http_proxy}}
+        https_proxy: {{https_proxy}}
+        no_proxy: {{no_proxy}}
   - put: addca-pipeline
     params:
       pipelines:
