fixed bug in build-secrets.sh

--- a/secrets.example.yaml
+++ b/secrets.example.yaml
@@ -22,6 +22,6 @@ git-private-key: |
   1
   -----END RSA PRIVATE KEY-----
 
-http_proxy: 
-https_proxy: 
-no_proxy: 
+http-proxy: 
+https-proxy: 
+no-proxy: 
