reverted last change

--- a/src/main/concourse/pipeline.jobs.template.yaml
+++ b/src/main/concourse/pipeline.jobs.template.yaml
@@ -13,7 +13,11 @@
   - task: test
     config:
       platform: linux
-      image: _FLATNAME_-_TAG_-image
+      image_resource:
+        type: docker-image
+        source:
+          repository: _NAME_
+          tag: _TAG_
       inputs:
       - name: ca-src
       - name: certificates
@@ -61,7 +65,14 @@
   - task: test
     config:
       platform: linux
-      image: addca-_FLATNAME_-_TAG_-image
+      image_resource:
+        type: docker-image
+        source:
+          email: {{docker-registry-email}}
+          username: {{docker-registry-username}}
+          password: {{docker-registry-password}}
+          repository: _PREFIX__NAME_
+          tag: _TAG_
       inputs:
       - name: ca-src
       - name: certificates
