--- a/src/main/docker/Dockerfile.rhel.template
+++ b/src/main/docker/Dockerfile.rhel.template
@@ -3,3 +3,5 @@ FROM _SOURCE_
 COPY ca/* /etc/pki/ca-trust/source/anchors/
 
 RUN update-ca-trust
+
+ENV NODE_EXTRA_CA_ERTS=/etc/ssl/certs/ca-certificates.crt
