--- a/src/main/docker/Dockerfile.alpine.template
+++ b/src/main/docker/Dockerfile.alpine.template
@@ -5,3 +5,5 @@ RUN apk update && apk add ca-certificates
 COPY ca/* /usr/local/share/ca-certificates/
 
 RUN update-ca-certificates
+
+ENV NODE_EXTRA_CA_ERTS=/etc/ssl/certs/ca-certificates.crt
